# Nimbus

./: .coverage  .gitignore  Nimbus Arquitetura.drawio  README.md  check_cache.py  pyproject.toml  test_analysis.py  test_bisect.py  test_braces.py  test_custom_client.py  test_factory.py  test_final.py  test_generation.py  test_investigate.py  test_output.txt  test_size.py  test_strands.py  test_strands2.py  test_strands3.py
.github/: copilot-instructions.md
.nimbus_audit/: chat_audit.jsonl
.nimbus_sessions/session_1773850066571248/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1773925801891499/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1773927343389171/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1774011074042746/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1774032389445924/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1774035029670182/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1774272997739153/: analysis.json  architecture.json  proposal.json
.nimbus_sessions/session_1774276452254083/: analysis.json
.nimbus_sessions/session_1774276537886801/: analysis.json
propostas/: generated_proposal.txt  nimbus-Batatas_Inc-20260316-180220.md  nimbus-Batatas_Inc-20260316-183023.md  nimbus-Batatas_Inc-20260317-150734.md  nimbus-Batatas_Inc-20260317-174906.md  nimbus-BeFly-20260312-205601.md  nimbus-BeFly-20260312-220400.md  nimbus-Ciclope_Corporations-20260318-100425.md  nimbus-Ciclope_Corporations-20260318-131622.md  nimbus-Ciclope_Corporations-20260319-101625.md  nimbus-Ciclope_Corporations-20260319-104317.md  nimbus-Ciclope_Corporations-20260320-095636.md
src/: __init__.py  server.py  server_v2.py
src/agents/: __init__.py  __init__old.py  analysis_agent.py  architecture_agent.py  business_writing_agent.py  chat_policy_agent.py  coherence_agent.py  conversion_agent.py  csv_analysis_agent.py  docx_analysis_agent.py  generation_agent.py  generation_agent_v2.py  interaction_agent.py  notion_relevance_mapper.py  orchestrator.py  orchestrator_v2.py  pdf_analysis_agent.py  (+9 more)
(+11 files in other folders)
