[project]
name = "Nimbus"
version = "1.0.0"
description = "MCP Server for Architecture Proposal Generation System using AWS Strands Agents"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.29.0",
    "mcp>=1.1.2",
    "notion-client>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
file-analysis = [
    "PyPDF2>=3.0.0",           # PDF extraction
    "pdfplumber>=0.10.0",      # PDF tables
    "python-docx>=0.8.11",     # DOCX support
    "openpyxl>=3.10.0",        # XLSX support
    "boto3>=1.34.0"            # AWS S3 support
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["server"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "tools*"]
